# ANRO

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/lab2/lib/lab2/: turtle_controller
install/lab2/share/lab2/: package.sh
install/lab2/share/lab2/launch/: lab2.launch.py
lab2/: package.xml  setup.py
lab2/lab2/: pick_and_place.py  turtle_controller.py
lab2/launch/: lab2.launch.py  pick.launch.py  turtle.launch.py
lab3/: package.xml  setup.py
lab3/lab3/: forward_kin.py  joint_state_publisher.py  joint_states_conv.py
lab3/launch/: display.launch.xml  lab3.launch.py
lab3/rviz/: urdf_config.rviz
lab3/urdf/: robot.xacro
lab4/: package.xml  setup.py
lab4/lab4/: inverse_kin.py  joint_state_publisher.py  move_to_point.py
lab4/launch/: display.launch.py  display.launch.xml
lab4/rviz/: conf.rviz
lab4/urdf/: data.yaml  robot.xacro
lab5/: lab5_pd.vpp  lab5_pd.vpp.bak_000f  lab5_pd.vpp.bak_001d  lab5_pd.vpp.bak_002d  lab5_pd.vpp.bak_003d  lab5_pd.vpp.bak_004d  lab5_pd.vpp.bak_005d  lab5_pd.vpp.bak_006d  lab5_pd.vpp.bak_007d  lab5_pd.vpp.bak_008d  lab5_pd.vpp.bak_009d  lab5_pd.vpp.bak_010d  lab5_pd.vpp.bak_011d  lab5_pd.vpp.bak_012d  lab5_pd.vpp.bak_013d
log/: latest_build
src/lab2/: setup.py
src/lab2/lab2/: turtle_controller.py
