<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab4</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="miloszwie@gmail.com">mxn</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>tf2</depend>
  <depend>geometry_msgs</depend>
  <depend>urdf</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>

  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
